publish fixed version

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "dignifiedquire",
+  "author": "gorilla",
   "bugs": {
     "url": "https://github.com/gorilla/websocket"
   },
@@ -8,9 +8,8 @@
   },
   "gxVersion": "0.11.0",
   "language": "go",
-  "license": "",
-  "name": ".",
+  "license": "MIT",
+  "name": "websocket",
   "releaseCmd": "git commit -a -m \"gx publish $VERSION\"",
-  "version": "0.0.0"
+  "version": "0.0.1"
 }
-
